# mega-claude-connector

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
src/mega_connector/: __init__.py  cli.py  config.py  mcp_server.py  mega_client.py  tools.py
src/mega_connector/_mega/: mega.py
