[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mega-claude-connector"
version = "0.1.8"
description = "Mega.nz MCP server and Claude-powered CLI for cloud storage management"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mrigank Shekhar Chaubey", email = "mriganksc@infinitywards.com" }]
keywords = ["mega", "claude", "mcp", "ai", "cloud-storage"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "pycryptodome>=3.15.0",
    "tenacity>=8.0.0",
    "anthropic>=0.105.0",
    "mcp>=1.27.0",
    "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/mshekharc/mega-claude-connector"

[project.scripts]
mega-claude = "mega_connector.cli:chat"
mega-claude-mcp = "mega_connector.mcp_server:main_sync"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mega_connector = ["py.typed"]
